# jarvis

./: .env.example  CONTRIBUTING.md  README.md  compose.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: decision.md  feature.md
api/: Dockerfile  alembic.ini  pyproject.toml  requirements.in
api/migrations/: README.md  env.py
api/src/jarvis_api/: __init__.py  config.py  db.py  health.py  main.py  schema.py
config/caddy/: Caddyfile
config/emqx/: emqx.conf.example
config/mosquitto/: mosquitto.conf.example
config/secrets/: README.md
dashboard/: Caddyfile.fragment  README.md  index.html
dashboard/assets/: app.js  styles.css
docs/adr/: 001-phase-1-local-first-control-plane.md
docs/architecture/: action-policy-contract-v1.md  api-foundation.md  communication-decision-contract-v1.md  compose-control-plane-scaffold.md  device-enrollment-contract-v1.md  event-ingestion-contract-v1.md  portable-backup-restore-contract-v1.md
docs/contracts/: v1-control-plane.md
docs/integrations/: frigate-home-assistant-v1.md  hermes-boundary-v1.md
docs/mobile/: android-companion-v1.md
docs/operations/: backup-restore-v1.md  capacity-profiler.md  docker-wsl-readiness.md  image-lock-procedure.md  manual-acceptance-playbook.md
docs/policy/: action-governance-v1.md
docs/security/: emqx-device-authorization-v1.md  privacy-emergency-controls-v1.md
docs/ux/: local-dashboard-v1.md
