[project]
name = "jarvis-api"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic==1.18.5",
  "fastapi==0.139.0",
  "psycopg[binary]==3.3.4",
  "SQLAlchemy==2.0.51",
  "uvicorn==0.51.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"
